--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ body {
 
 /* Media Query */
 /* Laptop */
-@media (max-widht: 992px) {
+@media (max-width: 992px) {
    html {
      font-size: 75%;
    }
@@ -168,7 +168,7 @@ body {
    }
 }
 /* tablet */
-@media (max-widht: 786px) {
+@media (max-width: 786px) {
    html {
      font-size: 65%;
    }
@@ -185,7 +185,7 @@ body {
 }
 
 /* mobile phone */
-@media (max-widht: 576px) {
+@media (max-width: 576px) {
    html {
      font-size: 60%;
    } 
