--- a/style.css
+++ b/style.css
@@ -187,7 +187,7 @@ body {
 /* mobile phone */
 @media (max-width: 576px) {
    html {
-     font-size: 60%;
+     font-size: 1.5rem;
    } 
 
    .simply-countdown > .simply-section {
@@ -197,6 +197,7 @@ body {
 }
 
 .mynavbar .nav-link {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
+  padding: 0.5rem;
   text-align: center;
 }
